// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composeBanner prints a string 1`] = `
"[37m┌──────────────────────────────────────────────────────────────────────────────┐[39m
[37m│[39m                                 [37mhello world[39m                                  [37m│[39m
[37m└──────────────────────────────────────────────────────────────────────────────┘[39m"
`;

exports[`composeBanner respects breaks 1`] = `
"[37m┌──────────────────────────────────────────────────────────────────────────────┐[39m
[37m│[39m                                    [37mhello[39m                                     [37m│[39m
[37m│[39m                                    [37mworld[39m                                     [37m│[39m
[37m└──────────────────────────────────────────────────────────────────────────────┘[39m"
`;

exports[`composeBanner wraps long strings 1`] = `
"[37m┌──────────────────────────────────────────────────────────────────────────────┐[39m
[37m│[39m   [37mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod[39m    [37m│[39m
[37m│[39m     [37mtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim[39m     [37m│[39m
[37m│[39m   [37mveniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea[39m    [37m│[39m
[37m│[39m                              [37mcommodo consequat.[39m                              [37m│[39m
[37m└──────────────────────────────────────────────────────────────────────────────┘[39m"
`;
